# projectwise_quart

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
database/: chat_memory.sqlite
docs/: DATA_STRUCTURE_ANALYSIS.md  ISSUE.md  LOGGER.md  LOG_LISTENER.yml  MCP_CLIENT.md  MEMORY.md  agent.py  agent_all.py  projectwise_client.service
logs/: MCPClient.log.2025-08-12  long_term_memory.log.2025-08-12
projectwise/: __init__.py  config.py  extensions.py
projectwise/models/: models.py
projectwise/routes/: api.py  chat.py  chat_v2.py  chat_ws_room.py  ingestion.py  main.py  mcp_control.py  ws_chat.py
projectwise/services/analysis/: __init__.py  competitor_analysis.py  price_analysis.py  product_calculator.py  project_risk_analysis.py
projectwise/services/llm_chain/: llm_chains.py  llm_utils.py  tool_registry.py
projectwise/services/mcp/: adapter.py  client.py
projectwise/services/memory/: long_term_memory.py  noop_memory.py  short_term_memory.py  war_room.py
projectwise/services/workflow/: agent_all.py  chat_with_memory.py  handler_project_analysis.py  handler_proposal_generation.py  helper.py  intent_clasification.py  intent_classification.py  llm_reasoning_action.py  llm_with_memory.py  manager.py  prompt_instruction.py  reflection_actor.py  reflection_actor_v2.py  reflexion_actor.py
projectwise/templates/: analysis.html  base.html  chat.html  index.html  proposal.html  ws_room.html  ws_room_1.html
projectwise/utils/: helper.py  human_response.py  llm_io.py  logger.py  websocket_broker.py
tests/: test_chat.py
(+6 files in other folders)
