[project]
name = "projectwise-client"
version = "0.1.0"
description = "AI ProjectWise for Presales Team at Lintasarta"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "jsonschema>=4.25.0",
    "mcp[cli]>=1.12.4",
    "mem0ai>=0.1.115",
    "openai>=1.99.7",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "quart>=0.20.0",
    "quart-schema>=0.22.0",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tzdata>=2025.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]
